<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.mycore.pica2mods</groupId>
  <artifactId>pica2mods-parent</artifactId>
  <version>2.14-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>MyCoRe Pica2MODS</name>
  <url>https://github.com/MyCoRe-Org/pica2mods</url>
  <description>an XSL based transformer from PicaXML to MODS</description>
  <licenses>
    <license>
      <name>GNU General Public License, version 3</name>
      <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:https://github.com/MyCoRe-Org/pica2mods.git</connection>
    <developerConnection>scm:git:https://github.com/MyCoRe-Org/pica2mods.git</developerConnection>
    <url>https://github.com/MyCoRe-Org/pica2mods</url>
    <tag>v2.13</tag>
  </scm>
  <properties>
    <java.version>21</java.version>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spring.boot.version>4.1.0</spring.boot.version>
  </properties>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.15.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.5.0</version>
          <configuration>
            <archive>
              <manifestEntries>
                <Implementation-Title>${project.name}</Implementation-Title>
                <Implementation-Group-ID>${project.groupId}</Implementation-Group-ID>
                <Implementation-Artifact-ID>${project.artifactId}</Implementation-Artifact-ID>
                <Implementation-Version>${project.version}</Implementation-Version>
                <SCM-Commit>${git.commit.id.describe-short}</SCM-Commit>
                <SCM-Time>${git.commit.time}</SCM-Time>
                <SCM-Branch>${git.branch}</SCM-Branch>
                <SCM-Remote-URL>${git.remote.origin.url}</SCM-Remote-URL>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.4.0</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.11.2</version>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <!-- The newer version io.github.git-commit-id::git-commit-id-maven-plugin::7.0.0
		     does not build on Bamboo -->
          <groupId>pl.project13.maven</groupId>
          <artifactId>git-commit-id-plugin</artifactId>
          <version>4.9.10</version>
          <configuration>
            <useNativeGit>true</useNativeGit>
            <injectAllReactorProjects>true</injectAllReactorProjects>
            <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
            <failOnNoGitDirectory>false</failOnNoGitDirectory>
            <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
            <offline>true</offline>
          </configuration>
          <executions>
            <execution>
              <id>get-the-git-infos</id>
              <goals>
                <goal>revision</goal>
              </goals>
              <phase>validate</phase>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <!-- Schematron validation -->
        <groupId>name.dmaus.schxslt</groupId>
        <artifactId>java</artifactId>
        <version>4.0.2</version>
      </dependency>
      <dependency>
        <groupId>name.dmaus.schxslt</groupId>
        <artifactId>schxslt2</artifactId>
        <version>1.11.1</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>[2.0.0,2.0.99]</version>
      </dependency>
      <dependency>
        <groupId>net.sf.saxon</groupId>
        <artifactId>Saxon-HE</artifactId>
        <version>12.9</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.parsson</groupId>
        <artifactId>parsson</artifactId>
        <version>1.1.9</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>org.mycore</groupId>
        <artifactId>mycore-classifications</artifactId>
        <version>1.2</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>xml-apis</groupId>
        <artifactId>xml-apis</artifactId>
        <version>1.4.01</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>org.xmlresolver</groupId>
        <artifactId>xmlresolver</artifactId>
        <version>6.0.23</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.jdom</groupId>
        <artifactId>jdom2</artifactId>
        <version>2.0.6.1</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <developers>
    <developer>
      <id>mcrsteph</id>
      <name>Robert Stephan</name>
      <email>robert.stephan (at) uni-rostock.de</email>
      <organization>Universität Rostock, Universitätsbibliothek</organization>
      <organizationUrl>http://www.ub.uni-rostock.de</organizationUrl>
      <roles>
        <role>coordination</role>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <id>mcrkrebs</id>
      <name>Kathleen Neumann</name>
      <email>Kathleen.Neumann (at) gbv.de</email>
      <organization>Verbundzentrale des GBV (VZG), Document Management System</organization>
      <organizationUrl>http://www.gbv.de</organizationUrl>
      <roles>
        <role>coordination</role>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>
  <modules>
    <module>pica2mods-xslt</module>
    <module>pica2mods-validation</module>
    <module>pica2solr</module>
    <module>mods2solr</module>
    <module>pica2mods-webapp</module>
    <module>pica2mods-runner</module>
  </modules>

  <profiles>
    <profile>
      <id>sign-with-gpg</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.8</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
           </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>deploy-to-sonatype</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.10.0</version>
            <extensions>true</extensions>
            <configuration>
              <centralSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots</centralSnapshotsUrl>
              <publishingServerId>sonatype-central</publishingServerId>
              <autoPublish>true</autoPublish>
              <waitUntil>published</waitUntil>
              <excludeArtifacts>
                <excludeArtifact>pica2solr</excludeArtifact>
                <excludeArtifact>mods2solr</excludeArtifact>
                <excludeArtifact>pica2mods-webapp</excludeArtifact>
                <excludeArtifact>pica2mods-runner</excludeArtifact>
              </excludeArtifacts>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
